kubernetes/prod/app-prod-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prod-flask-service
  labels:
    app: prod-flask-app
spec:
  selector:
    app: prod-flask-app
  ports:
    - port: 5000       # the port other pods will use to talk to Flask
      targetPort: 5000 # the port the Flask app listens on in the container
  type: ClusterIP
