kubernetes/prod/app-prod-service-nodeport-flask.yml
---
kind: Service
apiVersion: v1
metadata:
    name: test-flask-nodeport-service
spec:
    type: NodePort
    selector:
        app: test-flask-app
    ports:
        - port: 5000
          targetPort: 5000
